WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275194
[WebGPU] GPURenderPipeline can surprisingly be garbage collected
https://bugs.webkit.org/show_bug.cgi?id=275194
Summary
[WebGPU] GPURenderPipeline can surprisingly be garbage collected
Mike Wyrzykowski
Reported
2024-06-05 22:06:42 PDT
[WebGPU] GPURenderPipeline can surprisingly be garbage collected
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-05 22:06:55 PDT
radar://129271876
Mike Wyrzykowski
Comment 2
2024-06-05 22:16:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29569
EWS
Comment 3
2024-06-06 23:24:47 PDT
Committed
279795@main
(d4f3388e87eb): <
https://commits.webkit.org/279795@main
> Reviewed commits have been landed. Closing PR #29569 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug